[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/PlayerRobot.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.3, 0.2, 0.4 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.6, 0.4, 0.8 )

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.1
bottom_radius = 0.1
height = 0.05
radial_segments = 32

[node name="PlayerRobot" type="VehicleBody"]
mass = 20.0
contacts_reported = 10
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.233574, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000264883, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="BWheelR" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.0380524, -0.350287 )
use_as_traction = true
wheel_radius = 0.1
wheel_friction_slip = 30.0
suspension_travel = 0.1
suspension_stiffness = 30.0
suspension_max_force = 60.0

[node name="MeshInstance" type="MeshInstance" parent="BWheelR"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="BWheelL" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.0380524, -0.349287 )
use_as_traction = true
wheel_radius = 0.1
wheel_friction_slip = 30.0
suspension_travel = 0.1
suspension_stiffness = 30.0
suspension_max_force = 60.0

[node name="MeshInstance" type="MeshInstance" parent="BWheelL"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="FWheelL" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.0380524, 0.319795 )
use_as_traction = true
use_as_steering = true
wheel_radius = 0.1
wheel_friction_slip = 30.0
suspension_travel = 0.1
suspension_stiffness = 30.0
suspension_max_force = 60.0

[node name="MeshInstance" type="MeshInstance" parent="FWheelL"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="FWheelR" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.0380524, 0.319795 )
use_as_traction = true
use_as_steering = true
wheel_radius = 0.1
wheel_friction_slip = 30.0
suspension_travel = 0.1
suspension_stiffness = 30.0
suspension_max_force = 60.0

[node name="MeshInstance" type="MeshInstance" parent="FWheelR"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.140484, 0.452694, 0.41501 )
light_bake_mode = 0
shadow_enabled = true
spot_range = 20.0
spot_attenuation = 2.07053
spot_angle_attenuation = 0.517632

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.252351, 0.333613 )
current = true
far = 50.0

[connection signal="body_entered" from="." to="." method="_on_PlayerRobot_body_entered"]
